--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <section class="hero">
-        <img src="https://cdn.pixabay.com/photo/2017/02/01/11/57/tractor-2029736_1280.jpg" alt="Trator no campo com cidade ao fundo">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tudosaladeaula.com%2F2023%2F04%2Fatividade-sobre-os-municipios-4o-e-5o-ano-com-texto-e-gabarito%2F&psig=AOvVaw1GEKkD7Hr-oWwF9j6_N1Xn&ust=1747447287051000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLDbv87ypo0DFQAAAAAdAAAAABA" alt="Trator no campo com cidade ao fundo">
         <div class="overlay">
             <h2>Celebrando o Encontro do Rural com o Urbano</h2>
             <p>Valorizando saberes, sabores e histórias que unem diferentes modos de viver.</p>
@@ -35,17 +35,17 @@
         <h2>Experiências Compartilhadas</h2>
         <div class="cards">
             <div class="card">
-                <img src="https://cdn.pixabay.com/photo/2016/08/25/16/24/farmers-market-1622092_1280.jpg" alt="Feira na cidade">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.acopiara.ce.gov.br%2Finforma%2F292&psig=AOvVaw3B3FgAv7f4uUNSVGlu5ekV&ust=1747447513725000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCODZnbnzpo0DFQAAAAAdAAAAABAW" alt="Feira na cidade">
                 <h3>Feira AgroCultural</h3>
                 <p>Alimentos frescos, artesanato e atrações culturais do interior no coração da cidade.</p>
             </div>
             <div class="card">
-                <img src="https://cdn.pixabay.com/photo/2017/02/27/16/14/urban-2108970_1280.jpg" alt="Oficina urbana">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fengenharia360.com%2Fweb-stories%2Farquitetura-de-fazendas-e-hortas-urbanas%2F&psig=AOvVaw3FtylrbWeSlbllz77dfoN0&ust=1747448038529000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLCttLL1po0DFQAAAAAdAAAAABAV" alt="Oficina urbana">
                 <h3>Oficinas Criativas</h3>
                 <p>Cursos sobre hortas urbanas, culinária regional e práticas ecológicas para jovens e adultos.</p>
             </div>
             <div class="card">
-                <img src="https://cdn.pixabay.com/photo/2016/11/29/07/21/farm-1869802_1280.jpg" alt="Campo interativo">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.camposdejulio.mt.gov.br%2FNoticias%2FExplorando-a-agricultura-familiar-uma-visita-educativa-as-hortas-de-campos-de-juliomt-3098&psig=AOvVaw0wR5UJhOm171GWc9bnk8QM&ust=1747448320773000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPCCrb32po0DFQAAAAAdAAAAABAU" alt="Campo interativo">
                 <h3>Conexão no Campo</h3>
                 <p>Visitas escolares e intercâmbio com comunidades rurais, unindo educação e vivência.</p>
             </div>
