--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
     <section id="experiencias">
         <h2>Experiências Compartilhadas</h2>
         <div class="cards">
-            <div class="card">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.acopiara.ce.gov.br%2Finforma%2F292&psig=AOvVaw3B3FgAv7f4uUNSVGlu5ekV&ust=1747447513725000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCODZnbnzpo0DFQAAAAAdAAAAABAW" alt="Feira na cidade">
+            <div class="card">"https://i.pinimg.com/736x/28/6d/e0/286de03d5e33960a12d9f7caffc5a612.jpg"
+                <img src="lu5ekV&ust=1747447513725000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCODZnbnzpo0DFQAAAAAdAAAAABAW" alt="Feira na cidade">
                 <h3>Feira AgroCultural</h3>
                 <p>Alimentos frescos, artesanato e atrações culturais do interior no coração da cidade.</p>
             </div>
-            <div class="card">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fengenharia360.com%2Fweb-stories%2Farquitetura-de-fazendas-e-hortas-urbanas%2F&psig=AOvVaw3FtylrbWeSlbllz77dfoN0&ust=1747448038529000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLCttLL1po0DFQAAAAAdAAAAABAV" alt="Oficina urbana">
-                <h3>Oficinas Criativas</h3>
+            <div class="card">https://i.pinimg.com/736x/cc/a3/84/cca384c0fe2820b0848277adad9672a5.jpg
+            
+                <img src="%2F&psig=AOvVaw3FtylrbWeSlbllz77dfoN0&ust=1747448038529000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLCttLL1po0DFQAAAAAdAAAAABAV"https://www.google.com/url?sa=i&url=https%3A%2F%2Fengenharia360.com%2Fweb-stories%2Farquitetura-de-fazendas-e-hortas-urbana alt="Oficina urbana">
+                <h3>Oficinas Criativas</h3>s
                 <p>Cursos sobre hortas urbanas, culinária regional e práticas ecológicas para jovens e adultos.</p>
             </div>
-            <div class="card">
+            <div class="card">https://i.pinimg.com/736x/94/85/93/948593eb5523ac5b2b61a410c0b22e8d.jpg
                 <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.camposdejulio.mt.gov.br%2FNoticias%2FExplorando-a-agricultura-familiar-uma-visita-educativa-as-hortas-de-campos-de-juliomt-3098&psig=AOvVaw0wR5UJhOm171GWc9bnk8QM&ust=1747448320773000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPCCrb32po0DFQAAAAAdAAAAABAU" alt="Campo interativo">
                 <h3>Conexão no Campo</h3>
                 <p>Visitas escolares e intercâmbio com comunidades rurais, unindo educação e vivência.</p>
